Implemented basic setup for UICollectionViews

--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                     <navigationItem key="navigationItem" title="CocoaHeadsNL" id="WP4-Ql-isp">
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="search" id="F0c-UP-Skd">
                             <connections>
-                                <segue destination="UVK-yH-wqA" kind="show" id="Ele-4z-LKF"/>
+                                <segue destination="UVK-yH-wqA" kind="show" identifier="showLocationList" id="Ele-4z-LKF"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -61,10 +61,11 @@
         <!--LocationListViewController-->
         <scene sceneID="f38-qE-wNH">
             <objects>
-                <collectionViewController id="UVK-yH-wqA" userLabel="LocationListViewController" sceneMemberID="viewController">
+                <collectionViewController id="UVK-yH-wqA" userLabel="LocationListViewController" customClass="LocationListViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ze8-RZ-GD0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6oJ-NM-xR6">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -72,7 +73,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="companyCollectionViewCell" id="Kw8-bT-4bt">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="companyCollectionViewCellIdentifier" id="Kw8-bT-4bt">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -80,6 +81,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <color key="backgroundColor" red="1" green="0.93333333330000001" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <segue destination="ori-rW-Eui" kind="show" id="Mt3-pL-Di2"/>
                                 </connections>
@@ -134,6 +136,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Rjy-ez-TrW">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KTF-6H-c5v">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -141,7 +144,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="jobsCollectionViewCell" id="CSJ-8J-BnC">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="jobsCollectionViewCellIdentifier" id="CSJ-8J-BnC" customClass="PFCollectionViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -149,6 +152,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <color key="backgroundColor" red="1" green="0.93333333330000001" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <segue destination="ori-rW-Eui" kind="show" id="dtn-6O-j6n"/>
                                 </connections>
