--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -209,7 +209,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Lk-B6-Z3J">
-                                <rect key="frame" x="16" y="192" width="568" height="21"/>
+                                <rect key="frame" x="16" y="192" width="568" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -221,55 +221,39 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ap-Zu-5X6">
-                                <rect key="frame" x="16" y="221" width="568" height="21"/>
+                                <rect key="frame" x="16" y="220" width="568" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="descriptiveTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZPC-Il-2k7">
-                                <rect key="frame" x="16" y="250" width="568" height="21"/>
+                                <rect key="frame" x="16" y="248" width="568" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OJ9-zM-66t">
-                                <rect key="frame" x="16" y="280" width="568" height="264"/>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="81V-9h-ksK">
+                                <rect key="frame" x="16" y="277" width="568" height="266"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <attributedString key="attributedText">
-                                    <fragment>
-                                        <string key="content">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum</string>
-                                        <attributes>
-                                            <font key="NSFont" size="17" name="HelveticaNeue"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
-                                        </attributes>
-                                    </fragment>
-                                    <fragment content=" poen legum odioque civiuda.">
-                                        <attributes>
-                                            <font key="NSFont" size="14" name="HelveticaNeue"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2Lk-B6-Z3J" firstAttribute="trailing" secondItem="4u5-d4-mUo" secondAttribute="trailingMargin" id="1d9-5G-hHV"/>
                             <constraint firstItem="0fV-eJ-Hgq" firstAttribute="trailing" secondItem="4u5-d4-mUo" secondAttribute="trailingMargin" id="2Qn-4u-NbD"/>
+                            <constraint firstItem="81V-9h-ksK" firstAttribute="trailing" secondItem="4u5-d4-mUo" secondAttribute="trailingMargin" id="2aU-qs-Ihl"/>
+                            <constraint firstItem="81V-9h-ksK" firstAttribute="top" secondItem="ZPC-Il-2k7" secondAttribute="bottom" constant="8" id="3Rm-cG-yDh"/>
+                            <constraint firstItem="81V-9h-ksK" firstAttribute="leading" secondItem="4u5-d4-mUo" secondAttribute="leadingMargin" id="9Nn-id-Q9U"/>
                             <constraint firstItem="ZPC-Il-2k7" firstAttribute="trailing" secondItem="4u5-d4-mUo" secondAttribute="trailingMargin" id="DWc-Iy-3dd"/>
                             <constraint firstItem="0fV-eJ-Hgq" firstAttribute="leading" secondItem="4u5-d4-mUo" secondAttribute="leadingMargin" id="IQH-rE-0A7"/>
                             <constraint firstItem="0Ap-Zu-5X6" firstAttribute="trailing" secondItem="4u5-d4-mUo" secondAttribute="trailingMargin" id="KhR-Oe-ONp"/>
                             <constraint firstItem="0Ap-Zu-5X6" firstAttribute="top" secondItem="2Lk-B6-Z3J" secondAttribute="bottom" constant="8" id="PTq-2n-EjK"/>
                             <constraint firstItem="ZPC-Il-2k7" firstAttribute="top" secondItem="0Ap-Zu-5X6" secondAttribute="bottom" constant="8" id="QMl-h6-9q2"/>
-                            <constraint firstItem="OJ9-zM-66t" firstAttribute="trailing" secondItem="4u5-d4-mUo" secondAttribute="trailingMargin" id="VEK-5e-gdG"/>
-                            <constraint firstItem="OJ9-zM-66t" firstAttribute="leading" secondItem="4u5-d4-mUo" secondAttribute="leadingMargin" id="VqO-20-Mss"/>
                             <constraint firstItem="2Lk-B6-Z3J" firstAttribute="top" secondItem="0fV-eJ-Hgq" secondAttribute="bottom" constant="8" id="X2r-3t-M4m"/>
-                            <constraint firstItem="OJ9-zM-66t" firstAttribute="top" secondItem="ZPC-Il-2k7" secondAttribute="bottom" constant="9" id="Y6w-h5-nZA"/>
                             <constraint firstItem="0Ap-Zu-5X6" firstAttribute="leading" secondItem="4u5-d4-mUo" secondAttribute="leadingMargin" id="aRI-C9-jh9"/>
                             <constraint firstItem="0fV-eJ-Hgq" firstAttribute="top" secondItem="HxG-n3-gmf" secondAttribute="bottom" constant="8" id="aVO-MY-HpP"/>
-                            <constraint firstItem="ZID-rV-ax2" firstAttribute="top" secondItem="OJ9-zM-66t" secondAttribute="bottom" constant="7" id="h4P-d9-jgP"/>
                             <constraint firstItem="ZPC-Il-2k7" firstAttribute="leading" secondItem="4u5-d4-mUo" secondAttribute="leadingMargin" id="m2B-pI-YCZ"/>
+                            <constraint firstItem="ZID-rV-ax2" firstAttribute="top" secondItem="81V-9h-ksK" secondAttribute="bottom" constant="8" id="thd-Ii-bb1"/>
                             <constraint firstItem="2Lk-B6-Z3J" firstAttribute="leading" secondItem="4u5-d4-mUo" secondAttribute="leadingMargin" id="vzr-dQ-Wt9"/>
                         </constraints>
                     </view>
@@ -278,7 +262,7 @@
                         <outlet property="logoView" destination="0fV-eJ-Hgq" id="M2y-nt-EtU"/>
                         <outlet property="sponsorLocation" destination="0Ap-Zu-5X6" id="4bw-tY-2Nd"/>
                         <outlet property="sponsorTitle" destination="2Lk-B6-Z3J" id="uzA-iJ-o7V"/>
-                        <outlet property="textView" destination="OJ9-zM-66t" id="Exj-z9-Ukg"/>
+                        <outlet property="webView" destination="81V-9h-ksK" id="LUa-m7-PSu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qDJ-MQ-Gxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
